# checol

./: README.md  pyproject.toml
.github/workflows/: ruff.yml  rye-lint.yml
src/checol/: __init__.py  __main__.py  gpt.py  main.py  vcs.py
src/checol/gpt/: __init__.py  chat_gpt.py  claude.py
