[project]
name = "checol"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "HAYASAKA Ryosuke", email = "hayasaka.ryosuke@gmail.com" }
]
dependencies = [
    "gitpython>=3.1.42",
    "fire>=0.6.0",
    "anthropic>=0.21.3",
    "halo>=0.0.31",
    "prompt-toolkit>=3.0.43",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/checol"]

[tool.hatch.envs.default.scripts]
checol = "main.py"

[project.scripts]
checol = 'checol.main:main'

[tool.rye.scripts]
lint = { chain = ["lint:ruff" ] }
"lint:ruff" = "ruff check . --fix"

[tool.ruff.lint]
select = ["I001"]
